tests/snapshots/tokenizer_elements__paragraph_flat_multiline.snap
---
source: tests/tokenizer_elements.rs
expression: tokens.tokens()
---
[
    (
        Text(
            "This",
        ),
        0..4,
    ),
    (
        Whitespace,
        4..5,
    ),
    (
        Text(
            "is",
        ),
        5..7,
    ),
    (
        Whitespace,
        7..8,
    ),
    (
        Text(
            "a",
        ),
        8..9,
    ),
    (
        Whitespace,
        9..10,
    ),
    (
        Text(
            "multi",
        ),
        10..15,
    ),
    (
        Dash,
        15..16,
    ),
    (
        Text(
            "line",
        ),
        16..20,
    ),
    (
        Whitespace,
        20..21,
    ),
    (
        Text(
            "paragraph",
        ),
        21..30,
    ),
    (
        Period,
        30..31,
    ),
    (
        Newline,
        31..32,
    ),
    (
        Text(
            "It",
        ),
        32..34,
    ),
    (
        Whitespace,
        34..35,
    ),
    (
        Text(
            "continues",
        ),
        35..44,
    ),
    (
        Whitespace,
        44..45,
    ),
    (
        Text(
            "on",
        ),
        45..47,
    ),
    (
        Whitespace,
        47..48,
    ),
    (
        Text(
            "the",
        ),
        48..51,
    ),
    (
        Whitespace,
        51..52,
    ),
    (
        Text(
            "second",
        ),
        52..58,
    ),
    (
        Whitespace,
        58..59,
    ),
    (
        Text(
            "line",
        ),
        59..63,
    ),
    (
        Period,
        63..64,
    ),
    (
        Newline,
        64..65,
    ),
    (
        Text(
            "And",
        ),
        65..68,
    ),
    (
        Whitespace,
        68..69,
    ),
    (
        Text(
            "even",
        ),
        69..73,
    ),
    (
        Whitespace,
        73..74,
    ),
    (
        Text(
            "has",
        ),
        74..77,
    ),
    (
        Whitespace,
        77..78,
    ),
    (
        Text(
            "a",
        ),
        78..79,
    ),
    (
        Whitespace,
        79..80,
    ),
    (
        Text(
            "third",
        ),
        80..85,
    ),
    (
        Whitespace,
        85..86,
    ),
    (
        Text(
            "line",
        ),
        86..90,
    ),
    (
        Period,
        90..91,
    ),
    (
        Newline,
        91..92,
    ),
]
