tests/snapshots/tokenizer_elements__paragraph_nested_in_list.snap
---
source: tests/tokenizer_elements.rs
expression: tokens.tokens()
---
[
    (
        Text(
            "And",
        ),
        0..3,
    ),
    (
        Whitespace,
        3..4,
    ),
    (
        Text(
            "they",
        ),
        4..8,
    ),
    (
        Whitespace,
        8..9,
    ),
    (
        Text(
            "can",
        ),
        9..12,
    ),
    (
        Whitespace,
        12..13,
    ),
    (
        Text(
            "have",
        ),
        13..17,
    ),
    (
        Whitespace,
        17..18,
    ),
    (
        Text(
            "mixed",
        ),
        18..23,
    ),
    (
        Whitespace,
        23..24,
    ),
    (
        Text(
            "content",
        ),
        24..31,
    ),
    (
        Colon,
        31..32,
    ),
    (
        Whitespace,
        32..33,
    ),
    (
        Text(
            "The",
        ),
        33..36,
    ),
    (
        Whitespace,
        36..37,
    ),
    (
        Text(
            "quick",
        ),
        37..42,
    ),
    (
        Whitespace,
        42..43,
    ),
    (
        Text(
            "brown",
        ),
        43..48,
    ),
    (
        Whitespace,
        48..49,
    ),
    (
        Text(
            "fox",
        ),
        49..52,
    ),
    (
        Whitespace,
        52..53,
    ),
    (
        Text(
            "jumps",
        ),
        53..58,
    ),
    (
        Whitespace,
        58..59,
    ),
    (
        Text(
            "over",
        ),
        59..63,
    ),
    (
        Whitespace,
        63..64,
    ),
    (
        Text(
            "the",
        ),
        64..67,
    ),
    (
        Whitespace,
        67..68,
    ),
    (
        Text(
            "lazy",
        ),
        68..72,
    ),
    (
        Whitespace,
        72..73,
    ),
    (
        Text(
            "dog",
        ),
        73..76,
    ),
    (
        Period,
        76..77,
    ),
    (
        Whitespace,
        77..78,
    ),
    (
        Number(
            "123",
        ),
        78..81,
    ),
    (
        Whitespace,
        81..82,
    ),
    (
        Text(
            "ABC",
        ),
        82..85,
    ),
    (
        Whitespace,
        85..86,
    ),
    (
        Text(
            "def",
        ),
        86..89,
    ),
    (
        ExclamationMark,
        89..90,
    ),
    (
        Newline,
        90..91,
    ),
]
