tests/snapshots/tokenizer_elements__paragraph_nested_in_session.snap
---
source: tests/tokenizer_elements.rs
expression: tokens.tokens()
---
[
    (
        Text(
            "Paragraphs",
        ),
        0..10,
    ),
    (
        Whitespace,
        10..11,
    ),
    (
        Text(
            "can",
        ),
        11..14,
    ),
    (
        Whitespace,
        14..15,
    ),
    (
        Text(
            "contain",
        ),
        15..22,
    ),
    (
        Whitespace,
        22..23,
    ),
    (
        Text(
            "numbers",
        ),
        23..30,
    ),
    (
        Colon,
        30..31,
    ),
    (
        Whitespace,
        31..32,
    ),
    (
        Number(
            "123",
        ),
        32..35,
    ),
    (
        Comma,
        35..36,
    ),
    (
        Whitespace,
        36..37,
    ),
    (
        Number(
            "456",
        ),
        37..40,
    ),
    (
        Comma,
        40..41,
    ),
    (
        Whitespace,
        41..42,
    ),
    (
        Number(
            "789",
        ),
        42..45,
    ),
    (
        Newline,
        45..46,
    ),
]
