tests/snapshots/tokenizer_elements__session_flat_numbered.snap
---
source: tests/tokenizer_elements.rs
expression: tokens.tokens()
---
[
    (
        Text(
            "Introduction",
        ),
        0..12,
    ),
    (
        Newline,
        12..13,
    ),
    (
        BlankLine(
            [
                (
                    Newline,
                    13..14,
                ),
            ],
        ),
        0..0,
    ),
    (
        Indent(
            [
                (
                    Indentation,
                    14..18,
                ),
            ],
        ),
        0..0,
    ),
    (
        Text(
            "This",
        ),
        18..22,
    ),
    (
        Whitespace,
        22..23,
    ),
    (
        Text(
            "is",
        ),
        23..25,
    ),
    (
        Whitespace,
        25..26,
    ),
    (
        Text(
            "a",
        ),
        26..27,
    ),
    (
        Whitespace,
        27..28,
    ),
    (
        Text(
            "simple",
        ),
        28..34,
    ),
    (
        Whitespace,
        34..35,
    ),
    (
        Text(
            "session",
        ),
        35..42,
    ),
    (
        Whitespace,
        42..43,
    ),
    (
        Text(
            "with",
        ),
        43..47,
    ),
    (
        Whitespace,
        47..48,
    ),
    (
        Text(
            "a",
        ),
        48..49,
    ),
    (
        Whitespace,
        49..50,
    ),
    (
        Text(
            "title",
        ),
        50..55,
    ),
    (
        Whitespace,
        55..56,
    ),
    (
        Text(
            "and",
        ),
        56..59,
    ),
    (
        Whitespace,
        59..60,
    ),
    (
        Text(
            "one",
        ),
        60..63,
    ),
    (
        Whitespace,
        63..64,
    ),
    (
        Text(
            "paragraph",
        ),
        64..73,
    ),
    (
        Whitespace,
        73..74,
    ),
    (
        Text(
            "of",
        ),
        74..76,
    ),
    (
        Whitespace,
        76..77,
    ),
    (
        Text(
            "content",
        ),
        77..84,
    ),
    (
        Period,
        84..85,
    ),
    (
        Newline,
        85..86,
    ),
    (
        Dedent(
            [],
        ),
        0..0,
    ),
]
