tests/snapshots/tokenizer_elements__session_flat_unnumbered.snap
---
source: tests/tokenizer_elements.rs
expression: tokens.tokens()
---
[
    (
        Number(
            "1",
        ),
        0..1,
    ),
    (
        Period,
        1..2,
    ),
    (
        Whitespace,
        2..3,
    ),
    (
        Text(
            "Introduction",
        ),
        3..15,
    ),
    (
        Colon,
        15..16,
    ),
    (
        Newline,
        16..17,
    ),
    (
        BlankLine(
            [
                (
                    Newline,
                    17..18,
                ),
            ],
        ),
        0..0,
    ),
    (
        Indent(
            [
                (
                    Indentation,
                    18..22,
                ),
            ],
        ),
        0..0,
    ),
    (
        Text(
            "This",
        ),
        22..26,
    ),
    (
        Whitespace,
        26..27,
    ),
    (
        Text(
            "session",
        ),
        27..34,
    ),
    (
        Whitespace,
        34..35,
    ),
    (
        Text(
            "has",
        ),
        35..38,
    ),
    (
        Whitespace,
        38..39,
    ),
    (
        Text(
            "a",
        ),
        39..40,
    ),
    (
        Whitespace,
        40..41,
    ),
    (
        Text(
            "numbered",
        ),
        41..49,
    ),
    (
        Whitespace,
        49..50,
    ),
    (
        Text(
            "title",
        ),
        50..55,
    ),
    (
        Whitespace,
        55..56,
    ),
    (
        Text(
            "marker",
        ),
        56..62,
    ),
    (
        Period,
        62..63,
    ),
    (
        Newline,
        63..64,
    ),
    (
        Dedent(
            [],
        ),
        0..0,
    ),
]
